# mu2e_trig_config

./: .muse  CMakeLists.txt  README.md
core/: trigDigiInputsEpilog.fcl  trigFilters.fcl  trigMCProductionSequences.fcl  trigMpr.fcl  trigMprSequences.fcl  trigProducers.fcl  trigRecoSequences.fcl  trigSequences.fcl  trigServices.fcl
data/: extrPosMenu.json  physMenu.json  valMenu.json
python/: SConscript  generateMenuFromJSON.py
test/: triggerTest.fcl  triggerTestMC.fcl
